Spec: Typo: Missing "is" in "This early error not planned"

--- a/spec.html
+++ b/spec.html
@@ -634,7 +634,7 @@ IterationStatement :
 </emu-note>
 
 <emu-note type=editor>
-<p>This early error not planned to be removed by an add-on proposal.</p>
+<p>This early error is not planned to be removed by an add-on proposal.</p>
 </emu-note>
 </ins>
 
@@ -770,7 +770,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 </emu-note>
 
 <emu-note type=editor>
-<p>This early error not planned to be removed by an add-on proposal.</p>
+<p>This early error is not planned to be removed by an add-on proposal.</p>
 </emu-note>
 </ins>
 
@@ -795,7 +795,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 </emu-note>
 
 <emu-note type=editor>
-<p>This early error not planned to be removed by an add-on proposal.</p>
+<p>This early error is not planned to be removed by an add-on proposal.</p>
 </emu-note>
 </ins>
 
