Spec § Environment Records: Corrected typos

--- a/spec.html
+++ b/spec.html
@@ -111,7 +111,7 @@ Purpose
 [[TopicBindingStatus]]
 </td>
 <td>
-Any
+*false* | *true*
 </td>
 <td>
 If the value is *false*, the associated program scope binds the topic (that is, it binds `#`) to a value. If the value is *false*, the scope has no topic binding. Its default value is *false*. The value may be changed from *false* to *true* but never vice versa.
@@ -125,7 +125,7 @@ If the value is *false*, the associated program scope binds the topic (that is, 
 Any
 </td>
 <td>
-If the value of [[TopicBindingStatus]] is *true*, this is the topic value (that is, the `#` value). The default value for [[TopicBindingStatus]] is *undefined*.
+If the value of [[TopicBindingStatus]] is *true*, this is the topic value (that is, the value of `#`). The default value for [[TopicValue]] is *undefined*.
 </td>
 </tr>
 </tbody>
