Spec § PipelineBodyEvaluation: Corrected algorithm typo repeated "Let arguments be"

--- a/spec.html
+++ b/spec.html
@@ -456,7 +456,7 @@ With parameter _symbol_.
 <p>Steps 1 and 2 are removed.</p>
 <p>Step 3 is replaced by:</p>
 <emu-alg type="i">
-1. Let _arguments_ be Let Arguments be a List containing the one element which is _headValue_.
+1. Let _arguments_ be a List containing the one element which is _headValue_.
 </emu-alg>
 <p>Step 4 is replaced by:</p>
 <emu-alg type="i">
