--- a/spec.html
+++ b/spec.html
@@ -30,7 +30,7 @@ contributors: J. S. Choi
 <h1>Lexical Topics</h1>
 
 <emu-note type=editor>
-<p>This is a new subsection of the <a href=https://tc39.github.io/ecma262/#sec-lexical-environments>original Lexical Environments clause</a>.</p>
+<p>This is a wholly new subsection of the <a href=https://tc39.github.io/ecma262/#sec-lexical-environments>original Lexical Environments clause</a>.</p>
 </emu-note>
 
 <p>The <dfn>topic binding</dfn> of a Lexical Environment immutably binds the topic reference `#` to one value of any ECMAScript language type (called the <dfn>topic value</dfn> or simply the <dfn>topic</dfn>), within that Lexical Environment, at the Lexical Environment's time of instantiation. The topic of a Lexical Environment conceptually serves as the value that the lexical context is “about”. Many Lexical Environments do not have topic bindings: in particular, object and global environments never have topic bindings.</p>
@@ -52,9 +52,11 @@ contributors: J. S. Choi
 <emu-clause id="sec-environment-records">
 <h1>Environment Records</h1>
 
+<ins class=block>
 <emu-note type=editor>
 <p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-environment-records>original Environment Records clause</a>.</p>
 </emu-note>
+</ins>
 
 <emu-table id="table-15" caption="Abstract Methods of Environment Records">
 <table>
@@ -83,9 +85,11 @@ Purpose
 <emu-clause id="sec-declarative-environment-records">
 <h1>Declarative Environment Records</h1>
 
+<ins class=block>
 <emu-note type=editor>
 <p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
 </emu-note>
+</ins>
 
 <p>Each declarative Environment Record is associated with an ECMAScript program scope containing variable, constant, let, class, module, import, and/or function declarations. A declarative Environment Record binds the set of identifiers defined by the declarations contained within its scope.</p>
 
@@ -171,6 +175,10 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 <ins class=block>
 <emu-clause id="sec-declarative-environment-records-hastopic">
 <h1>HasTopic ( )</h1>
+<emu-note type=editor>
+<p>This is a wholly new subsection of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
+</emu-note>
+
 <p>The concrete Environment Record method HasTopic for declarative Environment Records returns the value of the record's field [[TopicBindingStatus]], which is *false* by default. The value may instead be *true* if its BindTopicValue method has been called.</p>
 <emu-alg>
 1. Let _envRec_ be the function Environment Record for which the method was invoked.
@@ -180,6 +188,9 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 
 <emu-clause id="sec-declarative-environment-records-gettopicbinding">
 <h1>GetTopicBinding ( )</h1>
+<emu-note type=editor>
+<p>This is a wholly new subsection of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
+</emu-note>
 <p>The method GetTopicBinding for declarative Environment Records returns the value of the record's topic binding. It must not be called when the record's topic binding has not already been established.</p>
 <emu-note>
 <p>That is, Environment Records will never be called on an Environment Record before the BindTopicValue method has been called.</p>
@@ -193,6 +204,9 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 
 <emu-clause id="sec-declarative-environment-records-bindtopicvalue">
 <h1>BindTopicValue ( )</h1>
+<emu-note type=editor>
+<p>This is a wholly new subsection of the <a href=https://tc39.github.io/ecma262/#sec-declarative-environment-records>original Declarative Environment Records clause</a>.</p>
+</emu-note>
 <p>The method BindTopicValue for declarative Environment Records is guaranteed to be called only when the Environment Records still have void topic bindings.</p>
 <emu-alg>
 1. Let _envRec_ be the declarative Environment Record for which the method was invoked.
@@ -253,12 +267,6 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 <emu-clause id=sec-ecmascript-language-lexical-grammar>
 <h1>ECMAScript Language: Lexical Grammar</h1>
 
-<ins class=block>
-<emu-note type=editor>
-<p>See also the <a href=https://tc39.github.io/ecma262/#sec-ecmascript-language-lexical-grammar>original ECMAScript Language: Lexical Grammar clause</a>.</p>
-</emu-note>
-</ins>
-
 <emu-clause id=sec-punctuators>
 <h1>Punctuators</h1>
 
@@ -288,6 +296,13 @@ Punctuator :: one of
 
 <emu-clause id=sec-primary-expression>
 <h1>Primary Expression</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-primary-expression>original Primary Expression clause</a>.</p>
+</emu-note>
+</ins>
+
 <h2>Syntax</h2>
 
 <emu-grammar>
@@ -311,6 +326,11 @@ PrimaryExpression[Yield, Await] :
 <ins class=block>
 <emu-clause id="sec-topic-reference">
 <h1>The Topic Reference `#`</h1>
+
+<emu-note type=editor>
+<p>This is a wholly new section to be inserted between the <a href=https://tc39.github.io/ecma262/#sec-this-keyword>original `this` Keyword clause</a> and the <a href=https://tc39.github.io/ecma262/#sec-identifier-reference>original Identifier Reference clause</a>.</p>
+</emu-note>
+
 <p>The <dfn>topic reference</dfn>, which is the token `#`, is a nullary operator that evaluates to the value of the current Lexical Environment's topic. The topic reference acts as if it were a special variable: implicitly bound to the topic value, yet still lexically scoped. But `#` is not actually an |IdentifierName| and the topic reference is not a variable, and it cannot be bound by typical assignment; instead, it is immutably bound to a value during the instantiation of certain topic-binding environments.</p>
 <p>The concept of lexical topic binding is further discussed in <emu-xref href="#sec-lexical-topics">Lexical Topics</emu-xref> and in <emu-xref href="#sec-declarative-environment-records">Declarative Environment Records</emu-xref>.</p>
 
@@ -373,6 +393,11 @@ PrimaryExpression[Yield, Await] :
 </emu-clause>
 
 <ins class=block>
+
+<emu-note type=editor>
+<p>This is a wholly new section to be inserted between the <a href=https://tc39.github.io/ecma262/#sec-conditional-operator>original Conditional Operator (`?` `:`) clause</a> and the <a href=https://tc39.github.io/ecma262/#sec-assignment-operators>original Assignment Operators clause</a>.</p>
+</emu-note>
+
 <emu-clause id=sec-pipeline-operator>
 <h1>Pipeline Operator</h1>
 <h2>Syntax</h2>
@@ -499,6 +524,13 @@ With parameter _symbol_.
 
 <emu-clause id=sec-assignment-operators>
 <h1>Assignment Operators</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-assignment-operators>original Assignment Operators clause</a>.</p>
+</emu-note>
+</ins>
+
 <h2>Syntax</h2>
 
 <emu-grammar>
@@ -529,14 +561,19 @@ AssignmentExpression[In, Yield, Await] :
 
 <emu-clause id=sec-block-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-block-static-semantics-early-errors>original Block, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+
 <emu-grammar>BlockStatement : Block</emu-grammar>
 <ul>
 <li>
-  <ins>It is a Syntax Error if |Block| Contains `#` is *true*.</ins>
+  It is a Syntax Error if |Block| Contains `#` is *true*.
 </li>
 </ul>
 
-<ins class=block>
 <emu-note>
 <p>In general, syntax productions that define inner program scopes containing nested |Statement|s, including |BlockStatement|, may <strong>not</strong> contain a topic reference `#`. However, syntax productions associated with topic-binding environments (such as |PipelineTopicBody|) hide their own inner topic references from Contains; such topic references would not trigger the early error above.</p>
 <p>Although |BlockStatement| cannot contain topic reference `#`, |Block| itself can. Certain uses of |Block| in statement-level productions, such as |Block| in |TryStatement|, also allow the topic reference.</p>
@@ -551,6 +588,13 @@ AssignmentExpression[In, Yield, Await] :
 
 <emu-clause id=sec-if-statement-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-if-statement-static-semantics-early-errors>original `if` Statement, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+</ins>
+
 <emu-grammar>
 IfStatement :
   `if` `(` Expression `)` Statement `else` Statement
@@ -577,6 +621,10 @@ IfStatement :
 
 <emu-clause id=sec-iteration-statements>
 <h1>Iteration Statements</h1>
+
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-iteration-statements>original Iteration Statements clause</a>.</p>
+</emu-note>
 
 <emu-clause id="sec-semantics-static-semantics-early-errors">
 <h1>Static Semantics: Early Errors</h1>
@@ -619,6 +667,13 @@ IterationStatement :
 
 <emu-clause id=sec-with-statement-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-with-statement-static-semantics-early-errors>original `with` Statement, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+</ins>
+
 <emu-grammar>WithStatement : `with` `(` Expression `)` Statement</emu-grammar>
 <ul>
 <li>
@@ -644,6 +699,13 @@ IterationStatement :
 
 <emu-clause id=sec-switch-statement-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-switch-statement-static-semantics-early-errors>original `switch` Statement, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+</ins>
+
 <emu-grammar>SwitchStatement : `switch` Expression StatementList</emu-grammar>
 <ul>
 <li>
@@ -669,6 +731,13 @@ IterationStatement :
 
 <emu-clause id=sec-try-statement-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-try-statement-static-semantics-early-errors>original `try` Statement, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+</ins>
+
 <emu-grammar>
 Catch : `catch` `(` CatchParameter `)` Block</emu-grammar>
 <ul>
@@ -709,6 +778,13 @@ Finally : `finally` Block</emu-grammar>
 
 <emu-clause id=sec-function-definitions-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-function-definitions-static-semantics-early-errors>original Function Definitions, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+</ins>
+
 <emu-grammar>FunctionBody : FunctionStatementList</emu-grammar>
 <ul>
 <li>
@@ -731,6 +807,12 @@ Finally : `finally` Block</emu-grammar>
 
 <emu-clause id=sec-arrow-function-definitions-static-semantics-contains>
 <h1>Static Semantics: Contains</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-arrow-function-definitions-static-semantics-contains>original Arrow Functions, Static Semantics: Contains clause</a>.</p>
+</emu-note>
+</ins>
 
 <emu-grammar>ArrowFunction : ArrowParameters `=>` ConciseBody</emu-grammar>
 <emu-alg>
@@ -755,6 +837,13 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 <emu-clause id=sec-scripts-static-semantics-early-errors>
 <h1>Scripts: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Scripts, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+</ins>
+
 <emu-grammar>ScriptBody : StatementList</emu-grammar>
 <ul>
 <li>
@@ -780,6 +869,13 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 <emu-clause id=sec-modules-static-semantics-early-errors>
 <h1>Scripts: Early Errors</h1>
+
+<ins class=block>
+<emu-note type=editor>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Modules, Static Semantics: Early Errors clause</a>.</p>
+</emu-note>
+</ins>
+
 <emu-grammar>ModuleItem : StatementListItem</emu-grammar>
 <ul>
 <li>
