Spec §§ Scripts; Modules: Typos in headers for Static Semantics

--- a/spec.html
+++ b/spec.html
@@ -797,7 +797,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 <h1>Scripts</h1>
 
 <emu-clause id=sec-scripts-static-semantics-early-errors>
-<h1>Scripts: Early Errors</h1>
+<h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
 <p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Scripts, Static Semantics: Early Errors clause</a>.</p>
@@ -827,7 +827,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 <h1>Modules</h1>
 
 <emu-clause id=sec-modules-static-semantics-early-errors>
-<h1>Scripts: Early Errors</h1>
+<h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
 <p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-scripts-static-semantics-early-errors>original Modules, Static Semantics: Early Errors clause</a>.</p>
